chore: 정산에 참여한 회원이 정산 내역 조회 시 참여한 모든 회원 이름 조회하도록 구현